Replaced background video with an already blurred and darkened version to resolve Issue #1

--- a/client/pages/home/home.scss
+++ b/client/pages/home/home.scss
@@ -48,9 +48,6 @@
 	left: 50%; /* % of surrounding element */
 	top: 50%;
 	transform: translate(-50%, -50%); /* % of current element */
-
-	filter: blur(8px) brightness(0.7);
-	-webkit-filter: blur(8px) brightness(0.7);
 }
 
 .content-home {
